add links to specialization services examples

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                             <p>Fixing problems with layout html, css, javascript</p>
                         </div>
                         <p class="specialization_text">Helping with css, html</p>
-                        <a class="specialization_link">Read more</a>
+                        <a class="specialization_link" href="/projects#project-fixing">See example</a>
                     </div>
                     <div class="specialization_block">
                         <div class="specialization_title">
@@ -54,7 +54,7 @@
                             <p>Website development. Javascript</p>
                         </div>
                         <p class="specialization_text">Frontend tasks - making webpages, without heavy plugins from scratch with just Javascript</p>
-                        <a class="specialization_link">Read more</a>
+                        <a class="specialization_link" href="/projects#project-eCommerce">See example</a>
                     </div>
                     <div class="specialization_block">
                         <div class="specialization_title">
@@ -62,7 +62,7 @@
                             <p>Converting Figma to Website</p>
                         </div>
                         <p class="specialization_text">Convertation from Figma to Website html, css (javascript, bootstrap, sass)</p>
-                        <a class="specialization_link">Read more</a>
+                        <a class="specialization_link" href="/projects#project-fixing">See example</a>
                     </div>
                     <div class="specialization_block">
                         <div class="specialization_title">
@@ -70,7 +70,7 @@
                             <p>Responsive-mobile page development</p>
                         </div>
                         <p class="specialization_text">Working on mobile version with html, css, javascript</p>
-                        <a class="specialization_link">Read more</a>
+                        <a class="specialization_link" href="/projects#project-figmaToHtml">See example</a>
                     </div>
                 </div>
                 <div class="button">
