--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
                 <p class="description">My Work</p>
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
-                    <div class="portfolio_block">
+                    <div class="portfolio_block" id="project-figmaToHtml">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -42,21 +42,21 @@
                             <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </div>
-                    <div class="portfolio_block">
+                    <div class="portfolio_block" id="project-fixing">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
                                 I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br/> <a href="https://philanthropy-after.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer">link to this site</a>
-                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer">Old version</ф>
+                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer">Old version</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Fixing Philanthropy Landing page</p>
-                            <a class="portfolio_link" target="_blank" rel="noopener noreferrer"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </div>
-                    <div class="portfolio_block">
+                    <div class="portfolio_block" id="project-eCommerce">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -65,7 +65,7 @@
                         </div>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
-                            <p class="portfolio_name">California (Small-to-Medium size) Shop (under construction)</p>
+                            <p class="portfolio_name">California Small-to-Medium size Shop (under construction)</p>
                             <a class="portfolio_link" target="_blank" rel="noopener noreferrer"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </div>
