--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <p>Fixing problems with layout html, css, javascript</p>
                         </div>
                         <p class="specialization_text">Helping with css, html</p>
-                        <a class="specialization_link">Read more</a>
+                        <a class="specialization_link" href="/projects#project-fixing">See example</a>
                     </div>
                     <div class="specialization_block">
                         <div class="specialization_title">
@@ -68,7 +68,7 @@
                             <p>Website development. Javascript</p>
                         </div>
                         <p class="specialization_text">Frontend tasks - making webpages, <span style="text-decoration: underline;">without</span> heavy plugins from scratch with Javascript only</p>
-                        <a class="specialization_link">Read more</a>
+                        <a class="specialization_link" href="/projects#project-eCommerce">See example</a>
                     </div>
                     <div class="specialization_block">
                         <div class="specialization_title">
@@ -76,7 +76,7 @@
                             <p>Converting Figma to Website</p>
                         </div>
                         <p class="specialization_text">Convertation from Figma to Website html, css (javascript, bootstrap, sass)</p>
-                        <a class="specialization_link">Read more</a>
+                        <a class="specialization_link" href="/projects#project-figmaToHtml">See example</a>
                     </div>
                     <div class="specialization_block">
                         <div class="specialization_title">
@@ -84,7 +84,7 @@
                             <p>Responsive-mobile page development</p>
                         </div>
                         <p class="specialization_text">Working on mobile version with html, css, javascript</p>
-                        <a class="specialization_link">Read more</a>
+                        <a class="specialization_link" href="/projects#project-figmaToHtml">See example</a>
                     </div>
                 </div>
                 <div class="button">
