add icon and simple seo

--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
+        <meta name="description" content="Hire html and css Frontend web developer portfolio">
+        <link rel="icon" type="image/x-icon" href="./images/portfolio.ico">
     </head>
     <body>
         <div class="wrapper home">
@@ -94,13 +96,13 @@
                         <div class="footer_media-blocks">
                             <!-- <img src="./images/fb.svg" alt="my facebook link">
                             <img src="./images/twitter.svg" alt="my twitter link"> -->
-                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer"><img src="./images/in.svg" alt="my linkedin link"></a>
+                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow"><img src="./images/in.svg" alt="my linkedin link"></a>
                         </div>
                     </div>
                     <div class="footer_block">
                         <p class="footer_title">Resources</p>
                         <ul>
-                            <li>Services</li>
+                            <li><a href="/#specialization">Services</a></li>
                             <li><a href="/about">About me</a></li>
                             <li><a href="/contact">Contact</a></li>
                         </ul>
@@ -112,7 +114,7 @@
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer">here</a></p>
+                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow">here</a></p>
                         <!-- <form action="/contact" method="post">
                             <input id="email" type="text" name="email" placeholder="Enter your email">
                             <label for="email"><button type="submit">></button></label>
