--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
+        <meta name="description" content="Hire html and css Frontend web developer portfolio">
+        <link rel="icon" type="image/x-icon" href="./images/portfolio.ico">
     </head>
     <body>
         <div class="wrapper home projects">
@@ -33,7 +35,7 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br/> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link">link to this site</a>
+                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br/> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link" rel="nofollow">link to this site</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
@@ -47,7 +49,7 @@
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
                                 I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br/> <a href="https://philanthropy-after.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer">link to this site</a>
-                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer">Old version</a>
+                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer" rel="nofollow">Old version</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
@@ -60,13 +62,13 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br/> <a href="https://california-store.vercel.app/" target="_blank" rel="noopener noreferrer">link to this site</a>
+                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br/> <a href="https://california-store.vercel.app/" target="_blank" rel="noopener noreferrer" rel="nofollow">link to this site</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">California Small-to-Medium size Shop (under construction)</p>
-                            <a class="portfolio_link" target="_blank" rel="noopener noreferrer"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                            <a class="portfolio_link" target="_blank" rel="noopener noreferrer" rel="nofollow"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -88,13 +90,13 @@
                         <div class="footer_media-blocks">
                             <!-- <img src="./images/fb.svg" alt="my facebook link">
                             <img src="./images/twitter.svg" alt="my twitter link"> -->
-                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer"><img src="./images/in.svg" alt="my linkedin link"></a>
+                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow"><img src="./images/in.svg" alt="my linkedin link"></a>
                         </div>
                     </div>
                     <div class="footer_block">
                         <p class="footer_title">Resources</p>
                         <ul>
-                            <li>Services</li>
+                            <li><a href="/#specialization">Services</a></li>
                             <li><a href="/about">About me</a></li>
                             <li><a href="/contact">Contact</a></li>
                         </ul>
@@ -106,7 +108,7 @@
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer">here</a></p>
+                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow">here</a></p>
                         <!-- <form action="/contact" method="post">
                             <input id="email" type="text" name="email" placeholder="Enter your email">
                             <label for="email"><button type="submit">></button></label>
