--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
+        <meta name="description" content="Hire html and css Frontend web developer portfolio">
+        <link rel="icon" type="image/x-icon" href="./images/portfolio.ico">
     </head>
     <body>
         <div class="wrapper home">
@@ -50,7 +52,7 @@
                 <div class="home_arrow down-scroll"><img class="down-scroll" src="./images/arrow-down.svg" alt="slide page down"></div>
             </header>
 
-            <section class="specialization">
+            <section class="specialization" id="specialization">
                 <p class="description">What do I do?</p>
                 <h2 class="title">My Specialization</h2>
                 <div class="specialization_blocks">
@@ -96,7 +98,7 @@
                 <p class="description">My Work</p>
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
-                    <a href="https://allbirds-landing.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer">
+                    <a href="https://allbirds-landing.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer" rel="nofollow">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -109,7 +111,7 @@
                             <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </a>
-                    <a href="https://philanthropy-after.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer">
+                    <a href="https://philanthropy-after.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer" rel="nofollow">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -123,7 +125,7 @@
                             <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </a>
-                    <a href="https://california-store.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer">
+                    <a href="https://california-store.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer" rel="nofollow">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -158,13 +160,13 @@
                         <div class="footer_media-blocks">
                             <!-- <img src="./images/fb.svg" alt="my facebook link">
                             <img src="./images/twitter.svg" alt="my twitter link"> -->
-                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer"><img src="./images/in.svg" alt="my linkedin link"></a>
+                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow"><img src="./images/in.svg" alt="my linkedin link"></a>
                         </div>
                     </div>
                     <div class="footer_block">
                         <p class="footer_title">Resources</p>
                         <ul>
-                            <li>Services</li>
+                            <li><a href="/#specialization">Services</a></li>
                             <li><a href="/about">About me</a></li>
                             <li><a href="/contact">Contact</a></li>
                         </ul>
@@ -176,7 +178,7 @@
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer">here</a></p>
+                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow">here</a></p>
                         <!-- <form action="/contact" method="post">
                             <input id="email" type="text" name="email" placeholder="Enter your email">
                             <label for="email"><button type="submit">></button></label>
