fix project link

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br/> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link" rel="nofollow">link to this site</a>
+                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br/> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer" rel="nofollow">link to this site</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
