fix home page header text

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="home_text">
                         <h1 class="home_title">I Fix Your <p><span>Web</span>sites</p></h1>
                         <!-- <h1 class="home_title">I Create New <p><span>Web</span>sites</p></h1> -->
-                        <p class="home_descr"><a href="/reg.html"><a href="/contact.html">Leave email</a> and I will contact you. But before, look at my works, which you can see <span class="home_proj-link">on the left and right corners</span>. I provide fast and high quality results by skills and hard work. I fix your problems with layouts ;) </p>
+                        <p class="home_descr"><a href="/reg.html"><a href="/contact.html">Leave email</a> and I will contact you. But before, look at my works, which you can see <span class="home_proj-link">riight <a href="#portfolio">here!</a></span>. I provide fast and high quality results by skills and hard work. I fix your problems with layouts ;) </p>
                         <div class="home_buttons">
                             <a href="/contact.html"><button class="btn_green">Get in touch</button></a>
                         </div>
