1 fixing html validation errors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Andrewdev Website</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
@@ -29,8 +29,8 @@
                 <div class="home_intro">
                     <div class="home_projects-left">
                         <img class="vector" src="./images/projects-left.png" alt="projects vector">
-                        <a href="/1" class="home_project-left-one home_project"><img src="./images/project-left-one.jpg" alt="my project"></ф>
-                        <a href="/2" class="home_project-left-two home_project"><img src="./images/project-left-two.jpg" alt="my project"></a>
+                        <a href="/1" class="home_project-left-one home_project"><img src="./images/project-left-one.jpg" alt="my project"></a>
+                        <!-- <a href="/2" class="home_project-left-two home_project"><img src="./images/project-left-two.jpg" alt="my project"></a> -->
                         <a href="/3" class="home_project-left-three home_project"><img src="./images/project-left-three.jpg" alt="my project"></a>
                     </div>
                     <div class="home_text">
