2 fixing html validation errors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <p class="nav_logo"><a href="/">Andrewdev</a></p>
                     <img class="nav_hamb" src="./images/menu.svg" alt="open menu">
                     <ul class="nav_menu">
-                        <div class="nav_close">x</div>
+                        <span class="nav_close">x</span>
                         <li><a class="active nav_link" href="/">Home</a></li>
                         <li><a class="nav_link" href="/about">About</a></li>
                         <li><a class="nav_link" href="/projects">Projects</a></li>
