attempt to fix p in h1 validation error

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="/3" class="home_project-left-three home_project"><img src="./images/project-left-three.jpg" alt="my project"></a>
                     </div>
                     <div class="home_text">
-                        <h1 class="home_title">I Fix Your <p><span>Web</span>sites</p></h1>
+                        <h1 class="home_title">I Fix Your <em>Web</em>sites</h1>
                         <!-- <h1 class="home_title">I Create New <p><span>Web</span>sites</p></h1> -->
                         <p class="home_descr"><a href="/reg.html"><a href="/contact.html">Leave email</a> and I will contact you. But before, look at my works, which you can see <span class="home_proj-link">riight <a href="#portfolio">here!</a></span>. I provide fast and high quality results by skills and hard work. I fix your problems with layouts ;) </p>
                         <div class="home_buttons">
