fixing html validation errors

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <!-- <h1 class="home_title">I Create New <p><span>Web</span>sites</p></h1> -->
                         <p class="home_descr"><a href="/reg.html"><a href="/contact.html">Leave email</a> and I will contact you. But before, look at my works, which you can see <span class="home_proj-link">riight <a href="#portfolio">here!</a></span>. I provide fast and high quality results by skills and hard work. I fix your problems with layouts ;) </p>
                         <div class="home_buttons">
-                            <a href="/contact.html"><button class="btn_green">Get in touch</button></a>
+                            <a class="btn_green" href="/contact.html">Get in touch</a>
                         </div>
                     </div>
                     <div class="home_projects-right">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
                 <div class="button">
-                    <button class="btn_green"><a href="/projects">See my projects</a></button>
+                    <a class="btn_green" href="/projects">See my projects</a>
                 </div>
             </section>
 
@@ -98,44 +98,44 @@
                 <p class="description">My Work</p>
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
-                    <a href="https://allbirds-landing.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer" rel="nofollow">
+                    <a href="https://allbirds-landing.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS Landing Page, <br> Made withing 2 days. <br><br/> <span class="portfolio_popup-link">link to this site</span>
+                                HTML, CSS Landing Page, <br> Made withing 2 days. <br><br> <span class="portfolio_popup-link">link to this site</span>
                             </div>
                         </div>
                         <img src="./images/r-portfolio1.png" alt="">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Allbirds Landing Page</p>
-                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                            <a class="portfolio_link portfolio_btn portfolio-btn">View Details</a>
                         </div>
                     </a>
-                    <a href="https://philanthropy-after.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer" rel="nofollow">
+                    <a href="https://philanthropy-after.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br/> <span class="portfolio_popup-link">link to this site</span>
+                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br> <span class="portfolio_popup-link">link to this site</span>
                                 <span class="popup-link https://philanthropy-before.vercel.app/">Old version</span>
                             </div>
                         </div>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Fixing Philanthropy Landing</p>
-                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                            <a class="portfolio_link portfolio_btn portfolio-btn">View Details</a>
                         </div>
                     </a>
-                    <a href="https://california-store.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer" rel="nofollow">
+                    <a href="https://california-store.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... (project under construction) <br><br/> <span class="portfolio_popup-link">link to this site</span>
+                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... (project under construction) <br><br> <span class="portfolio_popup-link">link to this site</span>
                             </div>
                         </div>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">California Small-to-Medium size E-commerce</p>
-                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                            <a class="portfolio_link portfolio_btn portfolio-btn">View Details</a>
                         </div>
                     </a>
                 </div>
@@ -160,7 +160,7 @@
                         <div class="footer_media-blocks">
                             <!-- <img src="./images/fb.svg" alt="my facebook link">
                             <img src="./images/twitter.svg" alt="my twitter link"> -->
-                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow"><img src="./images/in.svg" alt="my linkedin link"></a>
+                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/in.svg" alt="my linkedin link"></a>
                         </div>
                     </div>
                     <div class="footer_block">
@@ -178,7 +178,7 @@
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow">here</a></p>
+                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer nofollow">here</a></p>
                         <!-- <form action="/contact" method="post">
                             <input id="email" type="text" name="email" placeholder="Enter your email">
                             <label for="email"><button type="submit">></button></label>
