new html validation fix

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="home_projects-left">
                         <img class="vector" src="./images/projects-left.png" alt="projects vector">
                         <a href="/1" class="home_project-left-one home_project"><img src="./images/project-left-one.jpg" alt="my project"></a>
-                        <!-- <a href="/2" class="home_project-left-two home_project"><img src="./images/project-left-two.jpg" alt="my project"></a> -->
+                        <a href="/2" class="home_project-left-two home_project"><img src="./images/project-left-two.jpg" alt="my project"></a>
                         <a href="/3" class="home_project-left-three home_project"><img src="./images/project-left-three.jpg" alt="my project"></a>
                     </div>
                     <div class="home_text">
@@ -108,7 +108,7 @@
                         <img src="./images/r-portfolio1.png" alt="">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Allbirds Landing Page</p>
-                            <a class="portfolio_link portfolio_btn portfolio-btn">View Details</a>
+                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
                     </a>
                     <a href="https://philanthropy-after.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
@@ -122,7 +122,7 @@
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Fixing Philanthropy Landing</p>
-                            <a class="portfolio_link portfolio_btn portfolio-btn">View Details</a>
+                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
                     </a>
                     <a href="https://california-store.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
@@ -135,7 +135,7 @@
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">California Small-to-Medium size E-commerce</p>
-                            <a class="portfolio_link portfolio_btn portfolio-btn">View Details</a>
+                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
                     </a>
                 </div>
