some another html validation errors fix

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="home_text">
                         <h1 class="home_title">I Fix Your <em>Web</em>sites</h1>
                         <!-- <h1 class="home_title">I Create New <p><span>Web</span>sites</p></h1> -->
-                        <p class="home_descr"><a href="/reg.html"><a href="/contact.html">Leave email</a> and I will contact you. But before, look at my works, which you can see <span class="home_proj-link">riight <a href="#portfolio">here!</a></span>. I provide fast and high quality results by skills and hard work. I fix your problems with layouts ;) </p>
+                        <p class="home_descr"><a href="/contact.html">Leave email</a> and I will contact you. But before, look at my works, which you can see <span class="home_proj-link">riight <a href="#portfolio">here!</a></span>. I provide fast and high quality results by skills and hard work. I fix your problems with layouts ;) </p>
                         <div class="home_buttons">
                             <a class="btn_green" href="/contact.html">Get in touch</a>
                         </div>
@@ -98,7 +98,7 @@
                 <p class="description">My Work</p>
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
-                    <a href="https://allbirds-landing.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
+                    <div href="https://allbirds-landing.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -110,8 +110,8 @@
                             <p class="portfolio_name">Allbirds Landing Page</p>
                             <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
-                    </a>
-                    <a href="https://philanthropy-after.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
+                    </div>
+                    <div href="https://philanthropy-after.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -124,8 +124,8 @@
                             <p class="portfolio_name">Fixing Philanthropy Landing</p>
                             <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
-                    </a>
-                    <a href="https://california-store.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
+                    </div>
+                    <div href="https://california-store.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -137,17 +137,17 @@
                             <p class="portfolio_name">California Small-to-Medium size E-commerce</p>
                             <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
-                    </a>
+                    </div>
                 </div>
                 <div class="button">
-                    <button class="btn_green"><a href="/projects.html">All Projects</a></button>
+                    <a class="btn_green" href="/projects.html">All Projects</a>
                 </div>
             </section>
 
             <section class="contact">
-                <p class="title">Need to fix or create website?</p>
+                <h2 class="title">Need to fix or create website?</h2>
                 <div class="button">
-                    <a href="/contact"><button class="btn_green">Contact me</button></a>
+                    <a class="btn_green" href="/contact">Contact me</a>
                 </div>
             </section>
 
