new html validation fix

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p class="description">My Work</p>
                 <h2 class="title">My Portfolio</h2>
                 <div class="portfolio_blocks">
-                    <div href="https://allbirds-landing.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
+                    <div class="portfolio_block">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -111,7 +111,7 @@
                             <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
                     </div>
-                    <div href="https://philanthropy-after.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
+                    <div class="portfolio_block">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
@@ -125,7 +125,7 @@
                             <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
                     </div>
-                    <div href="https://california-store.vercel.app/" class="portfolio_block" target="_blank" rel="noopener noreferrer nofollow">
+                    <div class="portfolio_block">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
