--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Andrewdev Website</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
@@ -31,7 +31,7 @@
                         Hello, <p>My name is Andrew.</p>
                         <span>I am from Poland, and I write code professionally since 2017! I am 21 years old, I want to help people with their website problems, bugs, confusions or with adding some new ideas&edits.</span>
                         <div class="button">
-                            <button class="btn_green"><a href="/contact">Contact me</a></button>
+                            <a class="btn_green" href="/contact">Contact me</a>
                         </div>
                     </div>
                     <img src="./images/me.jpg" alt="my picture">
@@ -76,14 +76,14 @@
                     </div>
                 </div>
                 <div class="button">
-                    <button class="btn_green"><a href="/projects">See my projects</a></button>
+                    <a class="btn_green" href="/projects">See my projects</a>
                 </div>
             </section>
 
             <section class="contact about-me_contact">
                 <p class="title">Need to fix website?</p>
                 <div class="button">
-                    <a href="/contact"><button class="btn_green">Contact me</button></a>
+                    <a class="btn_green" href="/contact">Contact me</a>
                 </div>
             </section>
 
