--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                     <p class="nav_logo"><a href="/">Andrewdev</a></p>
                     <img class="nav_hamb" src="./images/menu.svg" alt="open menu">
                     <ul class="nav_menu">
-                        <div class="nav_close">x</div>
+                        <li class="nav_close">x</li>
                         <li><a class="nav_link" href="/">Home</a></li>
                         <li><a class="active nav_link" href="/about">About</a></li>
                         <li><a class="nav_link" href="/projects">Projects</a></li>
@@ -81,7 +81,7 @@
             </section>
 
             <section class="contact about-me_contact">
-                <p class="title">Need to fix website?</p>
+                <h2 class="title">Need to fix website?</h2>
                 <div class="button">
                     <a class="btn_green" href="/contact">Contact me</a>
                 </div>
@@ -96,7 +96,7 @@
                         <div class="footer_media-blocks">
                             <!-- <img src="./images/fb.svg" alt="my facebook link">
                             <img src="./images/twitter.svg" alt="my twitter link"> -->
-                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow"><img src="./images/in.svg" alt="my linkedin link"></a>
+                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/in.svg" alt="my linkedin link"></a>
                         </div>
                     </div>
                     <div class="footer_block">
@@ -114,7 +114,7 @@
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow">here</a></p>
+                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer nofollow">here</a></p>
                         <!-- <form action="/contact" method="post">
                             <input id="email" type="text" name="email" placeholder="Enter your email">
                             <label for="email"><button type="submit">></button></label>
