--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
                     <p class="nav_logo"><a href="/">Andrewdev</a></p>
                     <img class="nav_hamb" src="./images/menu.svg" alt="open menu">
                     <ul class="nav_menu">
-                        <div class="nav_close">x</div>
+                        <li class="nav_close">x</li>
                         <li><a class="nav_link" href="/">Home</a></li>
                         <li><a class="nav_link" href="/about">About</a></li>
                         <li><a class="active nav_link" href="/projects">Projects</a></li>
@@ -35,7 +35,7 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br/> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer" rel="nofollow">link to this site</a>
+                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br/> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
@@ -49,7 +49,7 @@
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
                                 I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br/> <a href="https://philanthropy-after.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer">link to this site</a>
-                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer" rel="nofollow">Old version</a>
+                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">Old version</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
@@ -62,13 +62,13 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br/> <a href="https://california-store.vercel.app/" target="_blank" rel="noopener noreferrer" rel="nofollow">link to this site</a>
+                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br/> <a href="https://california-store.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">California Small-to-Medium size Shop (under construction)</p>
-                            <a class="portfolio_link" target="_blank" rel="noopener noreferrer" rel="nofollow"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                            <a class="portfolio_link" target="_blank" rel="noopener noreferrer nofollow"><button class="portfolio_btn portfolio-btn">View Details</button></a>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                         <div class="footer_media-blocks">
                             <!-- <img src="./images/fb.svg" alt="my facebook link">
                             <img src="./images/twitter.svg" alt="my twitter link"> -->
-                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow"><img src="./images/in.svg" alt="my linkedin link"></a>
+                            <a href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer nofollow"><img src="./images/in.svg" alt="my linkedin link"></a>
                         </div>
                     </div>
                     <div class="footer_block">
@@ -108,7 +108,7 @@
                         </ul>
                     </div>
                     <div class="footer_block">
-                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer" rel="nofollow">here</a></p>
+                        <p class="footer_title">Get in touch with me <a style="text-decoration: underline;" href="https://www.linkedin.com/in/andrey-sokolovsky-275a98165/" target="_blank" rel="noopener noreferrer nofollow">here</a></p>
                         <!-- <form action="/contact" method="post">
                             <input id="email" type="text" name="email" placeholder="Enter your email">
                             <label for="email"><button type="submit">></button></label>
