--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Andrewdev Website</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
@@ -35,49 +35,49 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br/> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
+                                HTML, CSS Landing Page from Figma, <br> Made withing 2 days. <br><br> <a href="https://allbirds-landing.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio1.png" alt="Growbe landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Allbirds Landing Page from Figma to html, css</p>
-                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
                     </div>
                     <div class="portfolio_block" id="project-fixing">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br/> <a href="https://philanthropy-after.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer">link to this site</a>
+                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br> <a href="https://philanthropy-after.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer">link to this site</a>
                                 <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">Old version</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">Fixing Philanthropy Landing page</p>
-                            <a class="portfolio_link"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
                     </div>
                     <div class="portfolio_block" id="project-eCommerce">
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br/> <a href="https://california-store.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
+                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... <br><br> <a href="https://california-store.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
                         <div class="portfolio_details">
                             <p class="portfolio_name">California Small-to-Medium size Shop (under construction)</p>
-                            <a class="portfolio_link" target="_blank" rel="noopener noreferrer nofollow"><button class="portfolio_btn portfolio-btn">View Details</button></a>
+                            <button class="portfolio_link portfolio_btn portfolio-btn">View Details</button>
                         </div>
                     </div>
                 </div>
             </section>
 
             <section class="contact">
-                <p class="title">Need to fix website?</p>
+                <h2 class="title">Need to fix website?</h2>
                 <div class="button">
-                    <a href="/contact"><button class="btn_green">Contact me</button></a>
+                    <a class="btn_green" href="/contact">Contact me</button>
                 </div>
             </section>
 
