--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
             <section class="contact">
                 <h2 class="title">Need to fix website?</h2>
                 <div class="button">
-                    <a class="btn_green" href="/contact">Contact me</button>
+                    <a class="btn_green" href="/contact">Contact me</a>
                 </div>
             </section>
 
