--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,10 @@
                 <div class="contacts_title">Leave email, and I will contact you within an hour.</div>
                 <form action="/contact" method="post" id="form">
                     <input id="email" type="email" name="email" placeholder="Enter your email">
-                    <label for="email"><button type="submit">></button></label>
+                    <button type="submit">
+                        <label for="email">></label>
+                    </button>
+                    <!-- <label for="email"><button type="submit">></button></label> -->
                 </form>
             </div>
         </div>
