add projects links

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS Landing Page, <br> Made withing 2 days. <br><br> <span class="portfolio_popup-link">link to this site</span>
+                                HTML, CSS Landing Page, <br> Made withing 2 days. <br><br> <a class="portfolio_popup-link" href="https://allbirds-landing.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio1.png" alt="">
@@ -115,8 +115,8 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br> <span class="portfolio_popup-link">link to this site</span>
-                                <span class="popup-link https://philanthropy-before.vercel.app/">Old version</span>
+                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br> <a class="portfolio_popup-link" href="https://philanthropy-after.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">link to fixed site</a>
+                                <a class="popup-link https://philanthropy-before.vercel.app/">or link to version before</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
@@ -129,7 +129,7 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... (project under construction) <br><br> <span class="portfolio_popup-link">link to this site</span>
+                                HTML, CSS, Javascript E-commerce store. <br> Slider, Displaying products from db, <br> Searching products etc... (project under construction) <br><br> <a class="portfolio_popup-link" href="https://california-store.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">link to this site</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio3.png" alt="California store project image">
