--- a/projects.html
+++ b/projects.html
@@ -48,8 +48,8 @@
                         <div class="portfolio_popup">
                             <div class="portfolio_popup-text">
                                 <span class="portfolio_popup-close popup-close">x</span>
-                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br> <a href="https://philanthropy-after.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer">link to this site</a>
-                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">Old version</a>
+                                I was fixing HTML, CSS on that Landing Page, <br> Completed within 2 days <br><br> <a href="https://philanthropy-after.vercel.app/" class="portfolio_popup-link" target="_blank" rel="noopener noreferrer">link to fixed site</a>
+                                <a href="https://philanthropy-before.vercel.app/" target="_blank" rel="noopener noreferrer nofollow">or link to version before</a>
                             </div>
                         </div>
                         <img src="./images/r-portfolio2.png" alt="Philanthropy landing project image">
